--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
 
 <body>
-  <h1>PLEASE MAKE SURE TO OPEN YOUR CONSOLE TO COPY AND PASTE TO IT<br>
-    TO RUN EACH FUNCTION INDIVIDUALLY<br>
+  <h1>PLEASE MAKE SURE TO OPEN YOUR CONSOLE PLAY ROCK PAPER SCISSORS GAME<br>
     YOU CAN DO THIS BY PRESSING AND HOLDING ctrl+shift+i </h1>
   ///////////////////////////////////////////////////////////////////////////
   <div class="neon-green-box">
